[project]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = [
    {name = "Артур",email = "pe4kahd@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.136.0,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
